--- a/style/style.css
+++ b/style/style.css
@@ -15,27 +15,34 @@
 
 /* first nav */
 
-.nav-top {
+.nav-hero {
   width: 100%;
   margin: 0 auto;
-  height: 40px;
   background-color: #22212d;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  
-  
+  color: #fff;
+  max-height: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
-.text{
-  text-align: center;
-  justify-content: center;
+#row-hero {
+  margin: 0 auto;
   align-items: center;
-
+  justify-content: center;
+  height: 50px;
+  background-color: transparent;
 }
 
+.nav-hero img {
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  margin-inline-end: 12px;
+}
 
-
+#col-hero, #col-heros{
+  background-color: transparent;
+}
 
 
 .nav {
