--- a/style/style.css
+++ b/style/style.css
@@ -69,10 +69,21 @@
 .nav {
   width: 100%;
   height: 90px;
-  justify-content: center;
-  align-items: center;
   background-color: #fff;
 }
+
+#navigation{
+  margin: 0 auto;
+  padding: 0;
+  align-items: center;
+  display: flex;
+}
+
+#hero-nav img{
+    background-color: transparent;
+}
+
+
 
 #hero-body {
   margin: 0 auto;
