--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+  --body-font: "Roboto", sans-serif;
+  --second-font: "Inter", sans-serif;
+}
+
+
 
 * {
   font-family: "Poppins" sans-serif;
@@ -21,8 +29,8 @@
   background-color: #22212d;
   color: #fff;
   max-height: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 #row-hero {
@@ -67,27 +75,69 @@
 }
 
 .nav {
-  width: 100%;
-  height: 90px;
+  max-width: 100%;
+  height: 100px;
   background-color: #fff;
 }
 
 #navigation {
+  width: 100%;
   margin: 0 auto;
   padding: 0;
+  background-color: transparent;
   align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 #hero-nav {
   margin: 0 auto;
-  padding: 0;
+  padding-left: 100px;
   justify-content: center;
   align-items: center;
   width: 100%;
+  background-color: transparent;
+
 }
 
-.logo img { 
+.logo{
   background-color: transparent;
+}
+
+.logo img {
+  background-color: transparent;
+}
+
+#nav__link,
+.nav__listed,
+.nav__list,
+.nav__list li,
+.nav__link {
+  background-color: transparent !important;
+}
+
+.nav__list li a{
+  text-decoration: none;
+  background-color: #fff;
+  color:#181818;
+  font-family: var(--second-font) ;
+}
+
+#nav__link{
+ padding-right: 100px;
+}
+
+.nav__list{
+  background-color: transparent;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 13px;
+  align-items: center;
+  color: #181818;
+  text-decoration: none;
+  font-size: 13px;
 }
 
 #hero-body {
