--- a/style/style.css
+++ b/style/style.css
@@ -150,7 +150,13 @@ body{
 /* Content */
 
 .content{
-  padding: 100px;
+ padding-left: 100px;
+}
+
+#content-row{
+  height: 100vh;
+  width: 100%;
+  
 }
 
 .content-title{
@@ -174,6 +180,8 @@ body{
 
 .icon-box i{
   margin-bottom: 15px;
+  padding: 0;
+  display: block;
 }
 
 /* footer */
