--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,8 @@ body{
 #content-row{
   height: 100vh;
   width: 100%;
+  margin: 0;
+  padding: ;
   
 }
 
@@ -182,6 +184,10 @@ body{
   margin-bottom: 15px;
   padding: 0;
   display: block;
+}
+
+.icon-box p{
+  margin: 0;
 }
 
 /* footer */
