--- a/style/style.css
+++ b/style/style.css
@@ -120,7 +120,7 @@ nav ul li a {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70%;
+  height: 75%;
   z-index: 0;
 }
 .background img {
@@ -149,6 +149,7 @@ nav ul li a {
   position: relative;
   z-index: 1;
   color: white;
+  height: 75%;
 }
 
 /* text */
@@ -226,13 +227,12 @@ nav ul li a {
 }
 .clients {
   overflow: hidden;
-  padding: 30px 0;
+  padding: 50px 0;
   background: #232323;
-  height: auto;
+  height: 100%;
   white-space: nowrap;
   position: relative;
   text-align: center;
-  margin-top: 90px;
 }
 
 .clients p {
@@ -274,4 +274,17 @@ nav ul li a {
   height: 150px;
   width: auto;
   margin: 0 40px;
+}
+
+/* product */
+.product {
+  height: 100vh;
+  width: 100%;
+  padding: 150px 300px;
+}
+
+.product-title p {
+  font-size: 40px;
+  font-family: var(--first-font);
+  font-weight: bold;
 }
