--- a/style/style.css
+++ b/style/style.css
@@ -290,6 +290,9 @@ nav ul li a {
   font-family: var(--first-font);
   font-weight: bold;
 }
+.product-title span{
+  font-size: 15px;
+}
 
 /* about us */
 .about-us {
@@ -337,6 +340,8 @@ nav ul li a {
 .card {
   height: 100%;
   max-height: 100%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .card-body {
