--- a/style/style.css
+++ b/style/style.css
@@ -290,16 +290,17 @@ nav ul li a {
   font-family: var(--first-font);
   font-weight: bold;
 }
-.product-title span{
+.product-title span {
   font-size: 15px;
 }
 
 /* about us */
+
 .about-us {
   padding: 100px 300px;
   width: 100%;
   height: 90vh;
-  background-color: #f3f6ff;
+  background-color: #1d1d1d;
 }
 
 #row-details {
@@ -307,6 +308,7 @@ nav ul li a {
   height: 100%;
   margin: 0 auto;
   padding: 0;
+  color: #ffffff;
 }
 
 .product-title p {
@@ -365,6 +367,30 @@ footer {
   background-color: #ffffff;
   text-align: center;
   padding: 100px 300px;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: #c7c7c7;
+  border-radius: 5px;
+}
+
+.logo-footer img {
+  width: 200px;
+}
+
+.span-title {
+  font-size: 30px;
+  font-weight: bold;
+}
+.span-footer {
+  font-size: 18px;
+}
+
+#footer-row {
+  width: 100%;
+  height: 100%;
 }
 
 .footer-text {
