--- a/style/style.css
+++ b/style/style.css
@@ -409,3 +409,10 @@ footer {
   color: rgb(90, 90, 90);
   font-size: small;
 }
+
+.text-end a{
+  color: rgb(26, 26, 26) !important;
+  text-decoration: none;
+
+}
+
