--- a/style/style.css
+++ b/style/style.css
@@ -324,24 +324,62 @@ footer {
   font-size: small;
 }
 
-.text-end a{
+.text-end a {
   color: rgb(26, 26, 26) !important;
   text-decoration: none;
-
 }
 
-
-
-/* contact us */
-
-.contact_us{
-  margin: 0 auto;
-  padding: 0;
+.contact_us {
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   display: flex;
-  flex-direction: column;
-  width: 100%;
+  margin: 0 auto;
+  padding: 20px 300px;
   text-align: center;
-  
+  height: auto;
+  width: 100%;
+}
+.contact_us button {
+  background: rgb(214, 44, 44);
+  width: 150px;
+  height: 50px;
+  border: none;
+}
+
+.get {
+  font-size: 60px;
+  font-family: var(--first-font);
+  font-weight: bold;
+}
+
+.contact_us span {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: var(--first-font);
+}
+
+#row-info {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  height: 20%;
+}
+
+#row-info i {
+  margin-bottom: 20px;
+}
+
+#row-info p {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: var(--first-font);
+}
+#row-info span {
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.iframe {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
