--- a/style/style.css
+++ b/style/style.css
@@ -329,6 +329,7 @@ footer {
   text-decoration: none;
 }
 
+/* contact us */
 .contact_us {
   justify-content: center;
   flex-direction: column;
@@ -382,4 +383,72 @@ footer {
 
 .iframe {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+/* FAQS */
+
+.faqs {
+  margin: 0 auto;
+  padding: 20px 300px;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+
+.faqs button {
+  background: rgb(214, 44, 44);
+  width: 150px;
+  height: 50px;
+  border: none;
+  margin-bottom: 50px;
+}
+
+.text-title {
+  font-family: var(--first-font);
+  font-weight: bold;
+}
+
+.nav-tabs {
+  height: 8%;
+  margin: 0 auto;
+  padding: 0;
+}
+.nav-item button {
+  text-decoration: none;
+  color: #1a1a1a;
+}
+
+#about , #oad, #tac , #pac {
+  padding: 50px;
+}
+
+#about p {
+  font-family: var(--first-font);
+  font-weight: bold;
+  font-size: 25px;
+  color: #000000;
+}
+
+#about span {
+  font-family: var(--first-font);
+  font-weight: 100;
+  font-size: 18px;
+}
+
+
+
+#oad p {
+  font-family: var(--first-font);
+  font-weight: bold;
+  font-size: 25px;
+  color: #000000;
+}
+#oad span {
+  font-family: var(--first-font);
+  font-weight: 100;
+  font-size: 18px;
 }
