--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,7 @@ body {
 .card-body {
   display: flex;
   flex-direction: column;
+  text-align: start;
 }
 
 .card-img-top.fixed-img {
@@ -422,7 +423,10 @@ footer {
   color: #1a1a1a;
 }
 
-#about , #oad, #tac , #pac {
+#about,
+#oad,
+#tac,
+#pac {
   padding: 50px;
 }
 
@@ -439,8 +443,6 @@ footer {
   font-size: 18px;
 }
 
-
-
 #oad p {
   font-family: var(--first-font);
   font-weight: bold;
@@ -452,3 +454,26 @@ footer {
   font-weight: 100;
   font-size: 18px;
 }
+
+/* shop */
+
+.shop {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 70px 300px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+
+#pills-tab {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+
