--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ footer {
   width: 100%;
   height: auto;
   margin: 0 auto;
-  padding: 70px 300px;
+  padding: 150px 300px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -476,4 +476,11 @@ footer {
   margin-bottom: 30px;
 }
 
+.custom-nav-bg {
+  background-color: #22212d;
+  border-radius: 0.5rem;
+}
 
+.shop li button{
+  color: #fff;
+}
