--- a/css/mq.css
+++ b/css/mq.css
@@ -164,6 +164,25 @@
     width: 200px;
     height: 100%;
   }
+
+  /* product */
+  .product {
+    margin: 0 auto;
+    padding: clamp(150px, 2vw, 50px) clamp(15px, 4vw, 40px);
+    width: 100%;
+    height: auto;
+  }
+
+  .product-title {
+    width: 100%;
+    height: auto;
+  }
+  .product-title p {
+   font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+   .card{
+    margin-bottom: 20px;
+   }
 }
 
 @media screen and (max-width: 600px) {
