--- a/css/mq.css
+++ b/css/mq.css
@@ -178,11 +178,46 @@
     height: auto;
   }
   .product-title p {
-   font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
   }
-   .card{
+  .card {
     margin-bottom: 20px;
-   }
+  }
+
+  /* about us */
+  .about-us {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  #row-details {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 100px;
+  }
+
+  footer {
+    margin: 0 auto;
+    padding: 20px 50px;
+    height: auto;
+  }
+
+  #footer-row {
+    margin: 0 auto;
+    padding: 0;
+    width: 0 auto;
+    padding: 0;
+  }
+  .responsive-center {
+    text-align: center !important;
+  }
+
+
+  .footer-details span{
+    text-align: center !important;
+  }
 }
 
 @media screen and (max-width: 600px) {
