--- a/css/mq.css
+++ b/css/mq.css
@@ -48,7 +48,7 @@
 }
 
 /* tablets */
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 601px) and (max-width: 768px) {
   body {
     margin: 0 auto;
     padding: 0;
@@ -225,7 +225,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media (min-width: 481px) and (max-width: 600px) {
   body {
     margin: 0 auto;
     padding: 0;
@@ -387,180 +387,21 @@
     font-size: clamp(0.9375rem, -0.625rem + 5vw, 1.25rem);
   }
 
-  .about-us {
-    padding: 50px 10px;
+   .about-us {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+   #row-details {
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 90px;
   }
 
   footer {
     padding: 50px 10px;
-  }
-}
-
-@media (max-width: 480px) {
-  /* small phones (e.g. iPhone SE) */
-  body {
-    margin: 0 auto;
-    padding: 0;
-  }
-
-  /* navbar */
-
-  nav {
-    margin: 0;
-    padding: 10px 50px;
-  }
-
-  .logo img {
-    width: 120px;
-  }
-
-  #menuList {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: #444;
-    flex-direction: column;
-    gap: 30px;
-    padding: 60px 20px;
-    transition: left 0.3s ease;
-    display: flex;
-    z-index: 999;
-    transition: all 0.5s;
-  }
-  #menuList.active {
-    left: 0;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-
-  nav ul li a {
-    text-decoration: none;
-    color: #ffffff;
-  }
-
-  nav ul {
-    display: none;
-  }
-
-  .close-btn {
-    align-self: flex-end;
-    font-size: 24px;
-    color: white;
-    cursor: pointer;
-    margin-bottom: 20px;
-    display: block;
-  }
-
-  /* topbar */
-
-  .icon-text img {
-    width: 18px;
-    height: 18px;
-  }
-
-  #col-hero img {
-    width: 16px;
-    height: 15px;
-    margin-inline-end: 5px;
-  }
-  .topbar {
-    width: 100%;
-    background-color: #22212d;
-    padding: 20px 50px;
-  }
-
-  #toprow {
-    margin: 0;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .icon-text span {
-    background-color: transparent;
-    font-size: 8px;
-  }
-
-  .icon-text {
-    align-items: center;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-    color: #ffffff;
-  }
-
-  #col-heroes {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-  }
-
-  /* content */
-  .content {
-    padding: clamp(90px, 2vw, 50px) clamp(15px, 4vw, 40px); /* top/bottom left/right */
-    margin: 0;
-    height: auto;
-  }
-
-  #layer1 {
-    height: auto;
-    margin: 0 auto;
-    padding: 0;
-  }
-
-  .header {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    padding: 0;
-  }
-
-  .header p {
-    text-align: center;
-    margin: 0 auto;
-    /* padding-top: 80px; */
-    font-size: clamp(1.8125rem, 0.4732rem + 3.5714vw, 2.1875rem);
-  }
-
-  .text {
-    margin-top: 10px;
-  }
-
-  .header span {
-    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
-  }
-
-  .box-container {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  .box {
-    width: 85px;
-    height: 85px;
-  }
-  .box-text {
-    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
-  }
-
-  .product {
-    padding: 50px 20px;
-    height: auto;
-  }
-  .product-title p {
-    font-size: clamp(0.9375rem, -0.625rem + 5vw, 1.25rem);
-  }
-
-  .about-us {
-    padding: 50px 40px;
-    height: auto;
   }
 
   #footer-row {
@@ -578,7 +419,206 @@
     text-align: center;
   }
 
-  .card-responsive {
+   .card-responsive {
+    margin-bottom: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+   body {
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  /* navbar */
+
+  nav {
+    margin: 0;
+    padding: 10px 50px;
+  }
+
+  .logo img {
+    width: 120px;
+  }
+
+  #menuList {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: #444;
+    flex-direction: column;
+    gap: 30px;
+    padding: 60px 20px;
+    transition: left 0.3s ease;
+    display: flex;
+    z-index: 999;
+    transition: all 0.5s;
+  }
+  #menuList.active {
+    left: 0;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  nav ul li a {
+    text-decoration: none;
+    color: #ffffff;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  .close-btn {
+    align-self: flex-end;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    margin-bottom: 20px;
+    display: block;
+  }
+
+  /* topbar */
+
+  .icon-text img {
+    width: 18px;
+    height: 18px;
+  }
+
+  #col-hero img {
+    width: 16px;
+    height: 15px;
+    margin-inline-end: 5px;
+  }
+  .topbar {
+    width: 100%;
+    background-color: #22212d;
+    padding: 20px 50px;
+  }
+
+  #toprow {
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .icon-text span {
+    background-color: transparent;
+    font-size: 8px;
+  }
+
+  .icon-text {
+    align-items: center;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    color: #ffffff;
+  }
+
+  #col-heroes {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  /* content */
+  .content {
+    padding: clamp(90px, 2vw, 50px) clamp(15px, 4vw, 40px); /* top/bottom left/right */
+    margin: 0;
+    height: auto;
+  }
+
+  #layer1 {
+    height: auto;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .header {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .header p {
+    text-align: center;
+    margin: 0 auto;
+    /* padding-top: 80px; */
+    font-size: clamp(1.8125rem, 0.4732rem + 3.5714vw, 2.1875rem);
+  }
+
+  .text {
+    margin-top: 10px;
+  }
+
+  .header span {
+    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
+  }
+
+  .box-container {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .box {
+    width: 85px;
+    height: 85px;
+  }
+  .box-text {
+    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
+  }
+
+  .product {
+    padding: 50px 20px;
+    height: auto;
+    width: 100%;
+  }
+  .product-title p {
+    font-size: clamp(0.9375rem, -0.625rem + 5vw, 1.25rem);
+  }
+
+   .about-us {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+   #row-details {
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 50px;
+  }
+
+  footer {
+    padding: 50px 10px;
+  }
+
+  #footer-row {
+    margin: 0 auto;
+    padding: 0;
+    width: 0 auto;
+    padding: 0;
+  }
+
+  .text-align-end p {
+    text-align: center;
+  }
+
+  .responsive-align {
+    text-align: center;
+  }
+
+   .card-responsive {
     margin-bottom: 1.5rem;
   }
 }
