--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  height: 100vh;
+  height: auto;
   position: relative;
   overflow: hidden;
 }
@@ -63,7 +63,7 @@ body {
   position: relative;
   z-index: 1;
   color: white;
-  height: 75%;
+  height: auto;
 }
 
 /* text */
