--- a/css/mq.css
+++ b/css/mq.css
@@ -223,6 +223,45 @@
   .card-responsive {
     margin-bottom: 1.5rem;
   }
+  /* shop */
+  .shop {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .card-responsive {
+    margin-bottom: 1.5rem;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .faqs p {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .nav-tabs {
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .nav-tabs .nav-link {
+  font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+}
+
+  .tab-pane p {
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
 }
 
 @media (min-width: 481px) and (max-width: 600px) {
@@ -387,14 +426,14 @@
     font-size: clamp(0.9375rem, -0.625rem + 5vw, 1.25rem);
   }
 
-   .about-us {
+  .about-us {
     width: 100%;
     height: auto;
     padding: 0;
     margin: 0 auto;
   }
 
-   #row-details {
+  #row-details {
     width: 100%;
     margin: 0 auto;
     padding: 50px 90px;
@@ -419,13 +458,62 @@
     text-align: center;
   }
 
-   .card-responsive {
+  /* shop */
+  .shop {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .card-responsive {
     margin-bottom: 1.5rem;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 50px 10px;
+    height: auto;
+    width: 100%;
+  }
+
+  .nav-tabs {
+    padding: 15px;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 50px 10px;
+    height: auto;
+    width: 100%;
+  }
+
+  .faqs p {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .nav-tabs {
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .nav-tabs .nav-link {
+   font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
+  }
+
+  .tab-pane p {
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
   }
 }
 
 @media (max-width: 480px) {
-   body {
+  body {
     margin: 0 auto;
     padding: 0;
   }
@@ -586,14 +674,14 @@
     font-size: clamp(0.9375rem, -0.625rem + 5vw, 1.25rem);
   }
 
-   .about-us {
+  .about-us {
     width: 100%;
     height: auto;
     padding: 0;
     margin: 0 auto;
   }
 
-   #row-details {
+  #row-details {
     width: 100%;
     margin: 0 auto;
     padding: 50px 50px;
@@ -618,7 +706,59 @@
     text-align: center;
   }
 
-   .card-responsive {
+  .shop {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .card-responsive {
     margin-bottom: 1.5rem;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 0;
+    height: auto;
+    width: 100%;
+  }
+
+  .nav-tabs {
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 50px 5px;
+    height: auto;
+    width: 100%;
+  }
+
+  .faqs p {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .nav-tabs {
+    padding: 15px;
+  }
+
+  .nav-tabs .nav-link {
+   font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
+  }
+
+  #about {
+    padding:30px 15px;
+  }
+
+  .tab-pane p {
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
   }
 }
