--- a/css/mq.css
+++ b/css/mq.css
@@ -256,11 +256,45 @@
   }
 
   .nav-tabs .nav-link {
-  font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
-}
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
 
   .tab-pane p {
     font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
+
+  /* contact us */
+
+  .contact_us {
+    margin: 0 auto;
+    padding: 50px 30px;
+    width: 100%;
+    height: auto;
+  }
+
+  .contact_us p {
+    font-size: clamp(0.625rem, -8.4262rem + 24.0964vw, 3.125rem);
+  }
+
+  #row-info p {
+    font-size: clamp(0.625rem, -3.9006rem + 12.0482vw, 1.875rem);
+  }
+  #row-info span {
+    font-size: clamp(0.625rem, -1.6378rem + 6.0241vw, 1.25rem);
+  }
+  .contact_us span {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .iframe {
+    padding: 20px 20px;
+    width: 100%;
+  }
+
+  .iframe iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
   }
 }
 
@@ -504,11 +538,44 @@
   }
 
   .nav-tabs .nav-link {
-   font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
+    font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
   }
 
   .tab-pane p {
     font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
+
+  /* contact us */
+
+  .contact_us {
+    margin: 0 auto;
+    padding: 50px 30px;
+    width: 100%;
+    height: auto;
+  }
+
+  .contact_us p {
+    font-size: clamp(0.625rem, -8.2169rem + 29.4118vw, 2.8125rem);
+  }
+  .contact_us span {
+    font-size: clamp(0.625rem, -1.9013rem + 8.4034vw, 1.25rem);
+  }
+  #row-info p {
+    font-size: clamp(0.625rem, -0.6381rem + 4.2017vw, 0.9375rem);
+  }
+  #row-info span {
+    font-size: clamp(0.625rem, 0.1197rem + 1.6807vw, 0.75rem);
+  }
+
+  .iframe {
+    padding: 20px 20px;
+    width: 100%;
+  }
+
+  .iframe iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
   }
 }
 
@@ -751,14 +818,47 @@
   }
 
   .nav-tabs .nav-link {
-   font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
+    font-size: clamp(0.625rem, -1.1852rem + 4.8193vw, 1.125rem);
   }
 
   #about {
-    padding:30px 15px;
+    padding: 30px 15px;
   }
 
   .tab-pane p {
     font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
+
+  /* contact us */
+
+  .contact_us {
+    margin: 0 auto;
+    padding: 50px 30px;
+    width: 100%;
+    height: auto;
+  }
+
+  .contact_us p {
+    font-size: clamp(0.625rem, -11.875rem + 50vw, 3.125rem);
+  }
+  .contact_us span {
+    font-size: clamp(0.625rem, -2.5rem + 12.5vw, 1.25rem);
+  }
+  #row-info p {
+    font-size: clamp(0.625rem, -1.875rem + 10vw, 1.125rem);
+  }
+  #row-info span {
+    font-size: clamp(0.625rem, 0.625rem + 0vw, 0.625rem);
+  }
+
+  .iframe {
+    padding: 20px 20px;
+    width: 100%;
+  }
+
+  .iframe iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
   }
 }
