--- a/css/mq.css
+++ b/css/mq.css
@@ -6,18 +6,18 @@
     margin: 0 auto;
     padding: 0;
     width: 100%;
-    height: auto;
+    height: 120vh;
   }
 
   .topbar {
     width: 100%;
     background-color: #22212d;
-    padding: 20px 50px;
+    padding: 20px 22px;
   }
 
   nav {
     margin: 0 auto;
-    padding: 20px 50px;
+    padding: 20px 30px;
   }
 
   nav li a {
@@ -30,21 +30,225 @@
   }
 
   .icon-text img {
-    width: 22px;
-    height: 23px;
+    width: 15px;
+    height: 15px;
   }
 
   #col-hero img {
-    width: 20px;
-    height: 19px;
+    width: 15px;
+    height: 15px;
     margin-inline-end: 7px;
   }
 
+  #col-heroes {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
   .icon-text span {
-    font-size: 10px;
+    font-size: 9px;
   }
 
   /* content */
+
+  /* layer1 */
+  #layer1 {
+    max-height: 100%;
+  }
+
+  .background {
+    height: 75%;
+  }
+
+  .content {
+    height: 75%;
+    padding: clamp(150px, 2vw, 50px) clamp(15px, 4vw, 40px); /* top/bottom left/right */
+    margin: 0;
+  }
+
+  .header {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .header p {
+    text-align: center;
+    margin: 0 auto;
+    /* padding-top: 80px; */
+    font-size: clamp(1.8125rem, 0.4732rem + 3.5714vw, 2.1875rem);
+  }
+
+  .text {
+    margin-top: 10px;
+  }
+
+  .header span {
+    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
+  }
+
+  .box-container {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .box {
+    width: 85px;
+    height: 85px;
+  }
+  .box-text {
+    font-size: clamp(0.9375rem, 0.7143rem + 0.5952vw, 1rem);
+  }
+
+  /* clients */
+  .clients {
+    height: 280px;
+    padding: 40px 5px;
+    margin: 0 auto;
+  }
+
+  .clients:before,
+  .clients:after {
+    width: 200px;
+    height: 100%;
+  }
+
+  /* product */
+  .product {
+    margin: 0 auto;
+    padding: clamp(150px, 2vw, 50px) clamp(15px, 4vw, 40px);
+    width: 100%;
+    height: auto;
+  }
+
+  .product-title {
+    width: 100%;
+    height: auto;
+  }
+  .product-title p {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+  .card {
+    margin-bottom: 20px;
+  }
+
+  /* about us */
+  .about-us {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  #row-details {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 100px;
+  }
+
+  footer {
+    margin: 0 auto;
+    /* padding: 20px 50px; */
+    padding: clamp(150px, 2vw, 50px) clamp(15px, 4vw, 40px);
+    height: auto;
+  }
+
+  #footer-row {
+    margin: 0 auto;
+    padding: 0;
+    width: 0 auto;
+    padding: 0;
+  }
+
+  .text-align-end p {
+    text-align: center;
+  }
+
+  .responsive-align {
+    text-align: center;
+  }
+
+  .card-responsive {
+    margin-bottom: 1.5rem;
+  }
+  /* shop */
+  .shop {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .card-responsive {
+    margin-bottom: 1.5rem;
+  }
+
+  /* faqs */
+
+  .faqs {
+    margin: 0 auto;
+    padding: 50px 30px;
+    height: auto;
+    width: 100%;
+  }
+
+  .faqs p {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .nav-tabs {
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .nav-tabs .nav-link {
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
+
+  .tab-pane p {
+    font-size: clamp(0.625rem, -0.5064rem + 3.012vw, 0.9375rem);
+  }
+
+  /* contact us */
+
+  .contact_us {
+    margin: 0 auto;
+    padding: 50px 30px;
+    width: 100%;
+    height: auto;
+  }
+
+  .contact_us p {
+    font-size: clamp(0.625rem, -8.4262rem + 24.0964vw, 3.125rem);
+  }
+
+  #row-info p {
+    font-size: clamp(0.625rem, -3.9006rem + 12.0482vw, 1.875rem);
+  }
+  #row-info span {
+    font-size: clamp(0.625rem, -1.6378rem + 6.0241vw, 1.25rem);
+  }
+  .contact_us span {
+    font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
+  }
+
+  .iframe {
+    padding: 20px 20px;
+    width: 100%;
+  }
+
+  .iframe iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 
 /* tablets */
