--- a/css/style.css
+++ b/css/style.css
@@ -394,9 +394,9 @@ footer {
 
 .faqs {
   margin: 0 auto;
-  padding: 20px 300px;
+  padding: 70px 300px;
   width: 100%;
-  height: 100vh;
+  height: auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -425,6 +425,20 @@ footer {
 .nav-item button {
   text-decoration: none;
   color: #1a1a1a;
+}
+
+#tac span {
+  font-weight: bold;
+  font-family: var(--first-font);
+  font-size: 25px;
+  color: #000000;
+}
+#tac p{
+ line-height: 1.5rem;
+}
+
+.pre-title{
+ font-size: 25px; 
 }
 
 #about,
