--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,22 @@ body {
   object-fit: cover;
 }
 
+.mt-auto{
+  
+  justify-content: center !important; 
+  align-items: center !important;
+  margin: 0 auto !important;
+  display: flex !important;
+  width: 100% !important;
+  height: auto !important;
+}
+
+.mt-button{
+  width: 100%;
+}
+
+
+
 /* footer */
 
 footer {
