--- a/css/mq.css
+++ b/css/mq.css
@@ -712,6 +712,10 @@
   .card-responsive {
     margin-bottom: 1.5rem;
   }
+
+  .modal-body p{
+    font-size: clamp(0.875rem, 0.6224rem + 0.8403vw, 0.9375rem);
+  }
   
   /* faqs */
 
@@ -980,14 +984,13 @@
     margin-bottom: 1.5rem;
   }
 
-  /* faqs */
+  /* shop */
 
-  .faqs {
-    margin: 0 auto;
-    padding: 0;
-    height: auto;
-    width: 100%;
+  .card-body p{
+  font-size: clamp(0.9375rem, 0.6267rem + 1.6575vw, 1.125rem);
   }
+
+  /* faqs */
 
   .nav-tabs {
     padding: 15px;
@@ -995,8 +998,6 @@
     justify-content: center;
     margin: 0 auto;
   }
-
-  /* faqs */
 
   .faqs {
     margin: 0 auto;
@@ -1007,10 +1008,6 @@
 
   .faqs p {
     font-size: clamp(0.9375rem, -1.9643rem + 7.7381vw, 1.75rem);
-  }
-
-  .nav-tabs {
-    padding: 15px;
   }
 
   .nav-tabs .nav-link {
